# cg

./: .gitignore  README.md
bigduckgl-2021/: AUTHORS  Makefile  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
bigduckgl-2021/src/: Makefile  Makefile.am  Makefile.in  bigduckgl.h  context.cpp  drawelement.h  material.cpp  material.h  mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  shader.cpp  shader.h  texture.cpp
bigduckgl-2021/src/.deps/: camera.Plo  context.Plo  debug.Plo  drawelement.Plo  framebuffer.Plo  material.Plo  mesh.Plo  meshloader.Plo  query.Plo  shader.Plo  texture.Plo
blatt1/: raster-sdf.asy
blatt10/: Makefile  config.h  config.status  configure  configure.ac  imgui.ini
blatt10/render-data/: Makefile
blatt10/render-data/fonts/: Makefile  Makefile.am
blatt10/shaders/: Makefile  Makefile.am  Makefile.in  mask.frag  normalmapping.frag  normalmapping.vert  shading.vert  sky.frag  sky.vert
blatt10/src/: Makefile  cg  main.cpp
blatt11/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  imgui.ini
blatt11/render-data/: Makefile  Makefile.am
blatt11/render-data/fonts/: Makefile  Makefile.in
blatt11/render-data/models/: heli.mtl
blatt11/shaders/: Makefile  Makefile.am  Makefile.in  default.frag  light_rep.frag  normalmapping.frag  normalmapping.vert  shadows.frag  shadows.vert  sky.frag  tex.frag  tex.vert
blatt11/src/: Makefile  cg  main.cpp
blatt2/: affine.asy
blatt3/: Aufgabe1.asy  Aufgabe1.m  quat.asy  slerp.asy  solar.asy  video.mkv
blatt4/: renderpipeline.tar.bz2
blatt4-ref/: renderpipeline-ref.tar.bz2
blatt4-ref/renderpipeline-ref/: Makefile  main.cpp  raster.cpp
blatt4/renderpipeline/: Makefile  bunny.data  cmdline.cpp  cmdline.h  main.cpp  raster.cpp  scene.cpp  scene.h
blatt5-ref/: Makefile  cmdline.cpp  cmdline.h  raster.cpp  raster.h  rot.py  scene.cpp
blatt6/: AUTHORS  Makefile.in  config.status  configure  shader.frag  shader.vert
blatt6/src/: bunny.data  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
blatt6/src/.deps/: context.Po  main.Po  mesh.Po  shader.Po
blatt7/: Makefile  config.h  config.status  configure  configure.ac
blatt7/render-data/: Makefile
blatt7/render-data/fonts/: Makefile
blatt7/render-data/models/: heli2.mtl
blatt7/render-data/models/sponza/: sponza.fixed.mtl
blatt7/shaders/: Makefile  Makefile.am  Makefile.in  default.frag  material.frag  shading.frag
blatt7/src/: Makefile  Makefile.am  main.cpp
blatt8/: Makefile  config.h  config.status  configure  configure.ac  imgui.ini
blatt8/render-data/: Makefile  Makefile.in
blatt8/render-data/fonts/: Makefile
blatt8/shaders/: Makefile  Makefile.am  Makefile.in  default.vert  light_rep.vert  shading.frag  tex.frag  tex.vert
blatt8/src/: Makefile  Makefile.in  cg  main.cpp
blatt8/src/.deps/: main.Po
blatt9_1/: perspective.asy
blatt9_2/: config.h.in  configure  configure.ac
blatt9_2/shaders/: Makefile.am  Makefile.in  mask.frag  mask.vert  material.frag
blatt9_2/src/: main.cpp
imgui-2021/: AUTHORS  Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
imgui-2021/src/: Makefile  Makefile.am  Makefile.in
imgui-2021/src/.deps/: imgui.Plo  imgui_demo.Plo  imgui_draw.Plo  imgui_impl_glfw.Plo  imgui_impl_opengl3.Plo  imgui_widgets.Plo
meshrenderer-2021/: Makefile  Makefile.am  aclocal.m4  config.h  config.h.in  configure.ac
meshrenderer-2021/src/: Makefile  Makefile.am  Makefile.in  context.cpp  context.h  main.cpp  mesh.cpp
meshrenderer-2021/src/.deps/: mesh.Po
