AC_INIT([imgui], [2021], [Based on NiHo´s code])

AC_CONFIG_SRCDIR([src/imgui.cpp])
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_AUX_DIR([auxx])

AM_INIT_AUTOMAKE(dist-bzip2 no-dist-gzip)

AC_PROG_CXX
AC_LANG([C++])
AX_CXX_COMPILE_STDCXX(11)
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
