lib_LTLIBRARIES = libbigduckgl.la

libbigduckgl_la_SOURCES = camera.cpp \
						  context.cpp \
						  debug.cpp \
						  drawelement.cpp \
						  framebuffer.cpp \
						  material.cpp \
						  mesh.cpp \
						  meshloader.cpp \
						  query.cpp \
						  shader.cpp \
						  texture.cpp

library_includedir = $(includedir)/$(PACKAGE)
library_include_HEADERS = bigduckgl.h \
						  camera.h \
						  context.h \
						  debug.h \
						  drawelement.h \
						  file_util.h \
						  framebuffer.h \
						  material.h \
						  mesh.h \
						  meshloader.h \
						  named_map.h \
						  quad.h \
						  query.h \
						  shader.h \
						  stb_image.h \
						  stb_image_write.h \
						  texture.h \
						  timer.h
