EXTRA_DIST = default.frag default.vert \
			 light_rep.frag light_rep.vert \
			 material.frag material.vert \
			 shading.frag shading.vert

EXTRA_DIST += tex.frag tex.vert

EXTRA_DIST += mask.frag mask.vert

EXTRA_DIST += normalmapping.frag normalmapping.vert
EXTRA_DIST += sky.frag sky.vert

EXTRA_DIST += shadows.frag shadows.vert
