lib_LTLIBRARIES = libimgui.la

libimgui_la_SOURCES = imgui.cpp imgui_demo.cpp imgui_draw.cpp imgui_impl_glfw.cpp imgui_impl_opengl3.cpp imgui_widgets.cpp

library_includedir = $(includedir)/$(PACKAGE)
library_include_HEADERS = imgui.h imconfig.h imgui_impl_glfw.h imgui_impl_opengl3.h imgui_internal.h imstb_rectpack.h imstb_textedit.h imstb_truetype.h
